added mobile header and nav

--- a/webApp/src/sass/index.module.scss
+++ b/webApp/src/sass/index.module.scss
@@ -3,78 +3,78 @@
   margin: 0;
   padding: 0;
 }
-.logo {
-  height: 100vh;
-  width: 100vw;
-}
-
-.st0 {
-  // fill-rule: evenodd;
-  // clip-rule: evenodd;
-  fill: gray;
-  stroke: white;
-}
-
-// path,
-// polygon {
+// .logo {
+//   height: 100vh;
+//   width: 100vw;
 // }
 
-// .one {
-//   fill: #ffffff;
-//   stroke: #47556e;
-//   stroke-width: 1;
-//   stroke-dasharray: 335;
-//   stroke-dashoffset: 335;
-//   animation: draw 5s forwards;
-// }
-// .two {
-//   fill: #ffffff;
-//   stroke: #f4cece;
-//   stroke-width: 1;
-//   stroke-dasharray: 425;
-//   stroke-dashoffset: 425;
-//   animation: drawH 5s forwards;
-// }
-// .three {
-//   fill: rgba(255, 255, 255, 0);
-//   stroke: #fff;
-//   stroke-width: 0.11;
-//   stroke-dasharray: 15;
-//   stroke-dashoffset: 15;
-//   animation: drawTrim 5s forwards;
-//   animation-delay: 5s;
+// .st0 {
+//   // fill-rule: evenodd;
+//   // clip-rule: evenodd;
+//   fill: gray;
+//   stroke: white;
 // }
 
-// @keyframes draw {
-//   70% {
-//     // stroke-dashoffset: 0;
-//     stroke-width: 00.5;
-//     fill: #ffffff;
-//   }
-//   100% {
-//     stroke-dashoffset: 0;
-//     stroke-width: 0;
-//     fill: #47556e;
-//   }
-// }
+// // path,
+// // polygon {
+// // }
 
-// @keyframes drawH {
-//   70% {
-//     // stroke-dashoffset: 0;
-//     stroke-width: 0.5;
-//     fill: #ffffff;
-//   }
-//   100% {
-//     stroke-dashoffset: 0;
-//     stroke-width: 0;
-//     fill: #f4cece;
-//   }
-// }
-// @keyframes drawTrim {
-//   100% {
-//     stroke-dashoffset: 0;
+// // .one {
+// //   fill: #ffffff;
+// //   stroke: #47556e;
+// //   stroke-width: 1;
+// //   stroke-dasharray: 335;
+// //   stroke-dashoffset: 335;
+// //   animation: draw 5s forwards;
+// // }
+// // .two {
+// //   fill: #ffffff;
+// //   stroke: #f4cece;
+// //   stroke-width: 1;
+// //   stroke-dasharray: 425;
+// //   stroke-dashoffset: 425;
+// //   animation: drawH 5s forwards;
+// // }
+// // .three {
+// //   fill: rgba(255, 255, 255, 0);
+// //   stroke: #fff;
+// //   stroke-width: 0.11;
+// //   stroke-dasharray: 15;
+// //   stroke-dashoffset: 15;
+// //   animation: drawTrim 5s forwards;
+// //   animation-delay: 5s;
+// // }
 
-//     stroke-width: 0;
-//     fill: #fff;
-//   }
-// }
+// // @keyframes draw {
+// //   70% {
+// //     // stroke-dashoffset: 0;
+// //     stroke-width: 00.5;
+// //     fill: #ffffff;
+// //   }
+// //   100% {
+// //     stroke-dashoffset: 0;
+// //     stroke-width: 0;
+// //     fill: #47556e;
+// //   }
+// // }
+
+// // @keyframes drawH {
+// //   70% {
+// //     // stroke-dashoffset: 0;
+// //     stroke-width: 0.5;
+// //     fill: #ffffff;
+// //   }
+// //   100% {
+// //     stroke-dashoffset: 0;
+// //     stroke-width: 0;
+// //     fill: #f4cece;
+// //   }
+// // }
+// // @keyframes drawTrim {
+// //   100% {
+// //     stroke-dashoffset: 0;
+
+// //     stroke-width: 0;
+// //     fill: #fff;
+// //   }
+// // }
