--- a/webApp/src/layout/mobileNav/mobileNav.module.scss
+++ b/webApp/src/layout/mobileNav/mobileNav.module.scss
@@ -7,36 +7,26 @@
   position: fixed;
   bottom: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  align-content: center;
-}
-.selected {
-  background-color: config.$primary-bg-color;
-  opacity: 1;
-  z-index: 1000;
-  height: 100%;
-  width: 100%;
-  border-bottom: 3px solid config.$accent-primary-color;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 2%;
-  svg {
-    width: 80%;
-    height: 80%;
-  }
+  transform: translateZ(0);
 }
 
 .item {
   height: 100%;
   width: 100%;
-  padding: 2%;
-  opacity: 0.4;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
+}
+
+.selected {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: config.$primary-bg-color;
 }
