--- a/webApp/src/sass/icons.module.scss
+++ b/webApp/src/sass/icons.module.scss
@@ -42,3 +42,11 @@
   align-items: center;
   opacity: 1;
 }
+
+.link {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  // height: 80%;
+  // width: 100%;
+}
