complete home page

--- a/webApp/src/sass/_config.scss
+++ b/webApp/src/sass/_config.scss
@@ -5,3 +5,5 @@ $accent-primary-color: #e63946;
 $accent-secondary-color: #748cab;
 $text-color: #272838;
 $white-color: #ffffff;
+
+$primary-font: 'Gill Sans';
