--- a/webApp/src/layout/mobileHeader/mobileHeader.module.scss
+++ b/webApp/src/layout/mobileHeader/mobileHeader.module.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   width: 100vw;
   height: 10vh;
+  background-color: config.$white-color;
   overflow: hidden;
   box-shadow: 0px 1px 2px 0px rgba(255, 250, 250, 0.37);
   border-radius: 0px 0px 15px 15px;
