--- a/webApp/src/layout/mobileNav/mobileNav.module.scss
+++ b/webApp/src/layout/mobileNav/mobileNav.module.scss
@@ -2,7 +2,7 @@
 
 .nav {
   width: 100vw;
-  height: 10vh;
+  height: 7vh;
   background-color: config.$white-color;
   position: fixed;
   bottom: 0;
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
   transform: translateZ(0);
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .item {
