--- a/webApp/src/layout/mobileHeader/mobileHeader.module.scss
+++ b/webApp/src/layout/mobileHeader/mobileHeader.module.scss
@@ -9,7 +9,7 @@
   box-shadow: 0px 1px 2px 0px rgba(255, 250, 250, 0.37);
   border-radius: 0px 0px 15px 15px;
   border-bottom: 2px solid config.$primary-bg-color;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 100;
   padding: 5px;
