--- a/webApp/src/containers/product/productDetailsBottom.module.scss
+++ b/webApp/src/containers/product/productDetailsBottom.module.scss
@@ -1,25 +1,26 @@
 @use '../../sass/config';
 .productDetailsBottomCard {
-  height: 70%;
+  height: 73%;
   width: 100%;
+  margin-top: 50px;
 }
 
 .chips {
-  height: 10%;
+  height: 8%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
 .box {
-  height: 90%;
+  height: 70%;
   padding: 15px;
 }
 
 .heading {
   font-size: 1.5em;
   color: config.$secondary-color;
-  height: 35px;
+  height: 25px;
   font-weight: 400;
 }
 
