--- a/webApp/src/containers/product/productSlide.module.scss
+++ b/webApp/src/containers/product/productSlide.module.scss
@@ -3,7 +3,7 @@
 .box {
   width: 100%;
   height: 80%;
-  background-color: rgb(194, 122, 28);
+  background-color: antiquewhite;
 }
 
 .topIcons {
@@ -11,7 +11,6 @@
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-
   position: fixed;
   top: 0px;
   display: flex;
@@ -52,7 +51,7 @@
   padding-right: 15px;
 
   position: fixed;
-  top: 55%;
+  top: 50%;
   display: flex;
   justify-content: end;
 }
