--- a/webApp/src/template/productPage/productPage.module.scss
+++ b/webApp/src/template/productPage/productPage.module.scss
@@ -2,7 +2,16 @@
   height: 100%;
   width: 100%;
   background-color: rgb(255, 255, 255);
-  z-index: 1000;
-  position: absolute;
+  z-index: 1000000;
+  position: fixed;
+  top: 0px;
   overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button {
+  position: fixed;
+  bottom: 12px;
 }
