--- a/webApp/src/layout/mobileNav/mobileNav.module.scss
+++ b/webApp/src/layout/mobileNav/mobileNav.module.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   height: 7vh;
   background-color: config.$white-color;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   display: flex;
   justify-content: center;
